Update Github link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class = "text-and-command">
                             <b>To install ADSynthesizer, please follow the below commands:</b>
                             <div class="well well-sm">
-                                <p>git clone https://github.com/adsynth2024/ADSynth.git</p>
+                                <p>git clone https://github.com/adsynthesizer/ADSynth.git</p>
                                 <p>cd ADSynth</p>
                                 <p>pip3 install -r requirement.txt</p>
                                 <!-- <p>python3 setup.py install</p>    -->
