--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <main>
                 <div id = "home" v-if="service === 'home'">
                     <p>A realisitic Active Directory attack graph generator</p>
+                    <p class="home--title">Code Available badge at the 54th Annual IEEE/IFIP International Conference on Dependable Systems and Networks </p> 
                     <img src="images/ad_and_attack.jpeg" alt="Active Directory and its attack graphs">
                     <div class = "intro">
                         <div>Provide realistic AD data</div>
