--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
                         <i>
                             Please follow the embedded link to install <a href="https://www.python.org/downloads/">Python 3</a>
                         </i>
+                        
+                        <div class="iframe-container">
+                            <iframe src="https://www.youtube.com/embed/SOFeYnuxdvU">
+                            </iframe>
+                        </div>
+
                         <div class = "text-and-command">
                             <b>To install ADSynthesizer, please follow the below commands:</b>
                             <div class="well well-sm">
