Update CSS Inheritance

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             Please follow the embedded link to install <a href="https://www.python.org/downloads/">Python 3</a>
                         </i>
                         
-                        <div class="iframe-container">
+                        <div id="iframe-container">
                             <iframe src="https://www.youtube.com/embed/SOFeYnuxdvU">
                             </iframe>
                         </div>
