Update CSS rules

--- a/index.html
+++ b/index.html
@@ -167,23 +167,21 @@
                     <div class = "content">
                         <p>ADSynthesizer requires Python 3</p>
                         <i>
-                            Please follow the embedded link to install <a href="https://www.python.org/downloads/">Python 3</a>
+                            Please follow the video below to install ADSynth</a>
                         </i>
-                        
-                        <div id="iframe-container">
-                            <iframe src="https://www.youtube.com/embed/SOFeYnuxdvU">
-                            </iframe>
-                        </div>
 
-                        <div class = "text-and-command">
+                        <!-- <div class = "text-and-command">
                             <b>To install ADSynthesizer, please follow the below commands:</b>
                             <div class="well well-sm">
                                 <p>git clone https://github.com/adsynthesizer/ADSynth.git</p>
                                 <p>cd ADSynth</p>
                                 <p>pip3 install -r requirement.txt</p>
-                                <!-- <p>python3 setup.py install</p>    -->
                             </div>
-                        </div>                    
+                        </div>                     -->
+                    </div>
+                    <div id="iframe-container">
+                        <iframe src="https://www.youtube.com/embed/SOFeYnuxdvU">
+                        </iframe>
                     </div>
                 </div>
                 <div id = "usage" v-if = "service === 'usage'">
