--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class = "content">
                         <p>ADSynthesizer requires Python 3</p>
                         <i>
-                            Please follow the video below to install ADSynth</a>
+                            Please follow the video below and our <a href="https://github.com/adsynthesizer/ADSynth">Github page</a> to install ADSynth.
                         </i>
 
                         <!-- <div class = "text-and-command">
