--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <main>
                 <div id = "home" v-if="service === 'home'">
-                    <p>A realisitic Active Directory attack graph generator</p>
+                    <p>A realistic Active Directory attack graph generator</p>
 <!--                     <p class="home--title">Code Available badge at the 54th Annual IEEE/IFIP International Conference on Dependable Systems and Networks </p>  -->
                     <img src="images/ad_and_attack.jpeg" alt="Active Directory and its attack graphs">
                     <div class = "intro">
@@ -196,7 +196,7 @@
                 </div>
                 <div id = "publications" v-if = "service === 'publications'">
                     <b class = "title">Publications</b>
-                    <p class = "description">The work and the demo are accepted at 2 top-tier conferences</p>
+                    <p class = "description">Please use the following publication for references to ADSynth</p>
                     <div>
                         <p><b>Full paper: </b>Nhu Long Nguyen, Nickolas Falkner, and Hung Nguyen. 2024. ADSynth: Synthesizing Realistic Active Directory Attack Graphs. In <i>2024 54th Annual IEEE/IFIP
                             International Conference on Dependable Systems and Networks (DSN).</i> IEEE, NJ, USA. <b>[CORE A]</b></p>
