--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         </div>                        
                     </div>
                 </div>
-                <div id = "publications" v-if = "service === 'publications'">
+                <div id = "publications" v-if = "service === 'publications1'">
                     <b class = "title">Publications</b>
                     <p class = "description">Please use the following publication for references to ADSynth</p>
                     <div>
@@ -205,7 +205,7 @@
                     </div>
 
                 </div>
-                <div id = "contact" v-if = "service === 'contact'">
+                <div id = "contact" v-if = "service === 'contact1'">
                     <b class = "title">Contact</b>
                     <p class = "description">For further information, please find the listed contact info.</p>
                     <div>
